# iceXt

./: README.md  build.bat  program.hex
datasheets/: 8048_XT_INTERN.TXT
gateware/: config.vh  iceXt.f  top.v  top_loopback.v
gateware/bios/: bios.v
gateware/chipset/: pic.v  pit.v
gateware/clocks/: clocks.v  pll.v
gateware/cpu/: cpuBus.v  cpu_bus.v
gateware/io/: keyboard.v  keyboard2.v  ps2.v  sdcard.v  uart8250.v  uartBridge.v  uartMouse.v
gateware/pll/: pll.v
gateware/ps2/: keyboard.v
gateware/roms/: biosrom.v  diskrom.v
gateware/sound/: adlib.v  jtopl.f  ym3014.v
gateware/sram/: sram_ctrl.v
gateware/utils/: clkEnGen.v  reset.v  sevenSeg.v  spiMaster.v  uartRx.v  uartTx.v  vga.v
gateware/video/: cga.v  ega.v  mda.v
icefront/: boards.json  icefront.py
icefront/pcf/: iceXt.lpf
misc/: dos-boot-2.img  dos-boot.img
misc/SDRAM/: sdram.v
misc/bios/: make_win.bat  pcxtbios.asm  pcxtbios.lst
misc/boot/: boot.asm  build.bat  program.hex  tohex.py
misc/bootrom/: build.bat  entry.asm  main.cpp  tohex.py
misc/diskrom/: build.bat  diskrom.asm
misc/ega/: ega_plane_0.hex  ega_plane_1.hex  ega_plane_2.hex  ega_plane_3.hex
misc/emulator/: CMakeLists.txt  run.bash
misc/emulator/src/: cpu.c  cpu.h  disk.c  disk.h  display.c  display.h  font.c  keyboard.c  keyboard.h  libserial.h  main.c  serial.c  serial.h
misc/uart/: uart8250.v
roms/: diskrom.hex  ega_palette.hex  font8x8.hex  pcxtbios.hex  test_vram_gfx.hex  test_vram_txt.hex  tohex.py  xtramtest.hex
roms/bios/: make_win.bat  pcxtbios.asm  pcxtbios.lst  tohex.py
(+6 files in other folders)
